Implement core WhisperBox messaging backend with validation and scheduling